# ssas-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
ssas_mcp_server/: __init__.py  __main__.py  adomd.py  server.py
