[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssas-mcp-server"
version = "0.1.0"
description = "MCP server for querying SQL Server Analysis Services (SSAS) via DAX and MDX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nexus AI", email = "hallo@nexus-ai.nl" },
]
keywords = ["mcp", "ssas", "analysis-services", "dax", "mdx", "sql-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.0.0",
    "pyadomd>=0.1.0",
]

[project.urls]
Homepage = "https://www.nexus-ai.nl"
Repository = "https://github.com/NexusAI-Solutions/ssas-mcp-server"
Issues = "https://github.com/NexusAI-Solutions/ssas-mcp-server/issues"
