[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ssas-mcp-server"
version = "0.1.0"
description = "MCP server for querying SQL Server Analysis Services (SSAS) via DAX and MDX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nexus AI", email = "hallo@nexus-ai.nl" },
]
keywords = ["mcp", "ssas", "analysis-services", "dax", "mdx", "sql-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.0.0",
    "pyadomd>=0.1.0",
]

[project.scripts]
ssas-mcp-server = "ssas_mcp_server.__main__:main"

[project.urls]
Homepage = "https://www.nexus-ai.nl"
Repository = "https://github.com/NexusAI-Solutions/ssas-mcp-server"
Issues = "https://github.com/NexusAI-Solutions/ssas-mcp-server/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/ssas_mcp_server",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["ssas_mcp_server"]
